- pts-core: Fix CSV result output when there are missing results
- pts-core: Properly handle spaces in shell_exec() export
- pts-core: Other small fixes
- phodevi: Support for finding the Xorg.0.log in ~/.local/share/xorg/ with Debian now using that for non-root X Server
- phoromatic: Tweaks

Phoronix Test Suite 6.0 Milestone 4
25 October 2015

- phoromatic: Start of reworking the web interface
- phoromatic: Initial responsive design, mobile friendly
- phoromatic: Support for exporting results as XML via the viewer
- linux_perf: Add new module to provide perf output reporting on a per-test-run basis when LINUX_PERF=1 environment variable is set
- pts_Graph: Tweaks

Phoronix Test Suite 6.0 Milestone 3
9 October 2015

- pts_Graph: Continued SVG optimization work
- pts-core: Fix "auto-disks" test option to not show partitions
- pts-core: Various fixes
- pts-core: Finish work on auto-authenticating clients / settings page option to automatically approve newly added systems by default
- pts-core: Add extra warning about RequiresRoot=TRUE tests
- pts-core: Detect NVMe drives when looking for block devices for disk testing
- pts-core: Add "smartmontools" as new PTS External Dependency
- pts-core: Rewrite the DragonFlyBSD external dependency handling to now use dports pkg rather than pkgsrc
- pts-core: Add NO_HTTPS environment variable option for systems that have trouble with HTTPS

Phoronix Test Suite 6.0 Milestone 2
24 September 2015

- pts-core: Just mention PHP 5.3 as the new base requirement. Code still should largely work with PHP 5.2, but don't advertise it
- pts-core: Add FileFormat optional tag to result parser with CSV support
- pts-core: Add debug-render-test for helping to optimize the graph/result rendering process
- pts-core: Rendering optimizations when handling lots of result files / graphs / result identifiers
- pts-core: Rework and optimize the pts_result_file
- pts-core: Implement new, faster result merger