@@ -1,4 +1,204 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Phoronix Test Suite v6.0.0m4 - Test Client Documentation</title></head><body><h1>Phoronix Test Suite</h1><hr style="height: 50px; border: 0;"><ol><li><a href="#GettingStarted">Getting Started</a></li><li><a href="#UserOptions">User Options</a></li><li><a href="#ModuleOptions">Module Options</a></li><li><a href="#InstallationInstructions">Installation Instructions</a></li><li><a href="#ExternalDependencies">External Dependencies</a></li><li><a href="#Configuration">Configuration</a></li><li><a href="#GeneralInformation">General Information</a></li><li><a href="#VirtualTestSuites">Virtual Test Suites</a></li><li><a href="#ComponentTesting">Component Testing</a></li><li><a href="#Phoromatic">Phoromatic</a></li><li><a href="#PTSDesktopLive">PTS Desktop Live</a></li><li><a href="#DevelopmentCredits">Development Credits</a></li></ol><hr style="height: 50px; border: 0;"><a name="GettingStarted"></a><h1>Getting Started</h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+<html><!--
+
+Phoronix Test Suite
+URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
+Copyright (C) 2008 - 2015, Phoronix Media
+Copyright (C) 2008 - 2015, Michael Larabel
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see <http://www.gnu.org/licenses/>.
+--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Phoronix Test Suite</title><link rel="shortcut icon" href="http://www.phoronix-test-suite.com/favicon.ico"><link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet" type="text/css"><link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet" type="text/css"><style>
+		body
+		{
+			margin: 0;
+			padding: 0;
+			font: 14px ;
+			background: #fff;
+			color: #000;
+			letter-spacing: 1px;
+		}
+		ol
+		{
+			list-style-type: none;
+		}
+		li
+		{
+			font-size: 20px;
+			font-weight: bold;
+			color: #818C03;
+		}
+		a
+		{
+			color: inherit;
+			text-decoration: none;
+		}
+		a:hover
+		{
+			text-decoration: underline;
+		}
+		div#pts_container
+		{
+			text-align: left;
+			background: #FFF;
+			width: auto;
+			margin-top:0px !important;
+			margin-bottom:0px !important;
+			margin: 60px;
+			overflow: hidden;
+		}
+		a#pts_top_logo
+		{
+			display: block;
+			opacity: 1.0;
+			filter: alpha(opacity=100);
+		}
+		a#pts_top_logo svg
+		{
+			width: 160px;
+			height: auto;
+		}
+		a#pts_top_logo:hover
+		{
+			opacity: 0.48;
+			filter: alpha(opacity=48);
+		}
+		h1,h2,h3,h4,h5,h6
+		{
+			font-family: 'Quicksand', sans-serif;
+			margin-left: 10px;
+			margin-top: 10px;
+			font-size: 21px;
+			color: #818C03 ;
+			font-weight: bold !important;
+		}
+		h3
+		{
+			color: #757575;
+			font-size: 16px;
+		}
+		p
+		{
+			font-family: 'Josefin Sans', sans-serif;
+			margin-left: 10px;
+
+		}
+		div#pts_benchmark_area
+		{
+			background-color: #FFF;
+			margin: 30px auto;
+			color: #000;
+			overflow: hidden;
+		}
+		div.pts_benchmark_bar
+		{
+			overflow: hidden;
+			padding: 4px;
+			margin: 0 10px;
+			clear: both;
+		}
+		div.pts_benchmark_img_area
+		{
+			margin: 4px auto;
+			padding: 20px 10px;
+			overflow: hidden;
+			text-align: center;
+		}
+		div#pts_banner_nav
+		{
+			height: 28px;
+			background: #000 repeat-x;
+			border: solid #949494 1px;
+			text-align: center;
+			text-shadow: #000 0.1em 0.1em 0.2em;
+			color: #FFF;
+			font-weight: bold;
+			font-size: 14px;
+			padding-right: 1px;
+			margin: 4px 10px;
+		}
+		div#pts_banner_nav a
+		{
+			font-family: 'Quicksand', sans-serif;
+			width: 25%;
+			height: 100%;
+			display: block;
+			float: left;
+			line-height: 28px;
+			margin-right: -1px;
+			border: solid #333;
+			border-width: 0 1px 0 0;
+		}
+		div#pts_banner_nav a:hover
+		{
+			text-decoration: none;
+			background: #c8d905 repeat-x;
+		}
+		div#pts_footer
+		{
+			clear: both;
+			top: 20px;
+			width: 100%;
+			border: 0 solid #D4D4D4;
+			border-width: 1px 0 0;
+			padding: 15px 0 10px;
+			color: #757575;
+			font-size: 10px;
+		}
+		div#pts_footer a
+		{
+			text-decoration: none;
+		}
+		div#pts_footer a:hover, div#oborg_main_area blockquote a
+		{
+			text-decoration: underline;
+		}
+		div#pts_footer p
+		{
+			margin: 1px;
+			text-indent: 20px;
+		}
+		div#pts_footer_logo
+		{
+			float: right;
+			width: 96px;
+			height: 50px;
+			margin: 0 5px 10px;
+		}
+		div#pts_footer_logo svg
+		{
+			width: 100px;
+			height: auto;
+		}
+		div#pts_footer_logo a
+		{
+			display: block;
+			opacity: 0.48;
+			filter: alpha(opacity=48);
+		}
+		div#pts_footer_logo a:hover
+		{
+			opacity: 1.0;
+			filter: alpha(opacity=100);
+		}
+		</style></head><body>
+		<div id="pts_container">
+		<div style="overflow: hidden;">
+		<div style="text-align: right; float: right; clear: right; margin: 12px 10px 6px 8px;"><a href="http://www.phoronix-test-suite.com/" id="pts_top_logo"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewbox="0 0 76 41" width="76" height="41" preserveaspectratio="xMinYMin meet"><path d="m74 22v9m-5-16v16m-5-28v28m-23-2h12.5c2.485281 0 4.5-2.014719 4.5-4.5s-2.014719-4.5-4.5-4.5h-8c-2.485281 0-4.5-2.014719-4.5-4.5s2.014719-4.5 4.5-4.5h12.5m-21 5h-11m11 13h-2c-4.970563 0-9-4.029437-9-9v-20m-24 40v-20c0-4.970563 4.0294373-9 9-9 4.970563 0 9 4.029437 9 9s-4.029437 9-9 9h-9" stroke="#c8d905" stroke-width="4" fill="none"></path></svg></a></div>
+		<h1>Phoronix Test Suite</h1>
+		</div>
+		<div id="pts_banner_nav"></div>
+		<div id="pts_template_body"><ol><li><a href="#GettingStarted">Getting Started</a></li><li><a href="#UserOptions">User Options</a></li><li><a href="#ModuleOptions">Module Options</a></li><li><a href="#InstallationInstructions">Installation Instructions</a></li><li><a href="#ExternalDependencies">External Dependencies</a></li><li><a href="#Configuration">Configuration</a></li><li><a href="#GeneralInformation">General Information</a></li><li><a href="#VirtualTestSuites">Virtual Test Suites</a></li><li><a href="#ComponentTesting">Component Testing</a></li><li><a href="#Phoromatic">Phoromatic</a></li><li><a href="#PTSDesktopLive">PTS Desktop Live</a></li><li><a href="#DevelopmentCredits">Development Credits</a></li></ol><hr style="height: 50px; border: 0;"><a name="GettingStarted"></a><h1>Getting Started</h1>
 <h1>Overview</h1>
 <p>The Phoronix Test Suite is the most comprehensive testing and benchmarking platform available for Linux, Solaris, Mac OS X, and BSD operating systems. The Phoronix Test Suite allows for carrying out tests in a fully automated manner from test installation to execution and reporting. All tests are meant to be easily reproducible, easy-to-use, and support fully automated execution. The Phoronix Test Suite is open-source under the GNU GPLv3 license and is developed by Phoronix Media in cooperation with partners. Version 1.0 of the Phoronix Test Suite was publicly released in 2008.</p>
 <p>The Phoronix Test Suite client itself is a test framework for providing seamless execution of test profiles and test suites. There are more than 200 tests available by default, which are transparently available via <a href="http://openbenchmarking.org/">OpenBenchmarking.org</a> integration. Of these default test profiles there is a range of sub-systems that can be tested and a range of hardware from mobile devices to desktops and worksrtations/servers. New tests can be easily introduced via the Phoronix Test Suite's extensible test architecture, with test profiles consisting of XML files and shell scripts. Test profiles can produce a quantitative result or other qualitative/abstract results like image quality comparisons and pass/fail. Using Phoronix Test Suite modules, other data can also be automatically collected at run-time such as the system power consumption, disk usage, and other software/hardware sensors. Test suites contain references to test profiles to execute as part of a set or can also reference other test suites. Test suites are defined via an XML schema.</p>
@@ -249,4 +449,11 @@
 <li>Unigine Corp</li>
 <li>Vadim Peretokin</li>
 <li>Zachary Powers</li>
-</ul><p style="padding-top: 30px; text-align: center;">Copyright &copy; 2008 - 2015 by Phoronix Media.</p></body></html>
+</ul><p style="padding-top: 30px; text-align: center;">Copyright &copy; 2008 - 2015 by Phoronix Media.</p></div>
+		<div id="pts_footer">
+			<div id="pts_footer_logo"><a href="http://www.phoronix-test-suite.com/"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewbox="0 0 76 41" width="76" height="41" preserveaspectratio="xMinYMin meet"><path d="m74 22v9m-5-16v16m-5-28v28m-23-2h12.5c2.485281 0 4.5-2.014719 4.5-4.5s-2.014719-4.5-4.5-4.5h-8c-2.485281 0-4.5-2.014719-4.5-4.5s2.014719-4.5 4.5-4.5h12.5m-21 5h-11m11 13h-2c-4.970563 0-9-4.029437-9-9v-20m-24 40v-20c0-4.970563 4.0294373-9 9-9 4.970563 0 9 4.029437 9 9s-4.029437 9-9 9h-9" stroke="#c8d905" stroke-width="4" fill="none"></path></svg></a></div>
+			<p>Copyright &copy; 2008 - 2015 by <a href="http://www.phoronix-media.com/">Phoronix Media</a>.</p>
+			<p>All trademarks used are properties of their respective owners. All rights reserved.</p>
+		</div>
+		</div>
+	</body></html>
